--- a/htmlcss_advance_homework3/style.css
+++ b/htmlcss_advance_homework3/style.css
@@ -37,28 +37,26 @@ body {
 }
 
 .content_field {
+    position: relative;
     padding: 10px 0;
     margin-bottom: 10px;
     border-bottom: 1px solid #ccc;
 }
 
 .content_title {
-    float: left;
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 225px;
     font-size: 15px;
     color: #8f8c99;
 }
 
 .content {
+    padding-left: 225px;
     overflow: hidden;
     font-size: 13px;
     min-width: 190px;
-}
-
-.content::after{
-    content: '';
-    clear: both;
-    display: block;
 }
 
 .search_vertical_frame{
@@ -134,18 +132,18 @@ body {
     background-image: url(htmlcss_advance_form/ico_checkbox_on.png);
 }
 
-.selectbox{
+.category_element{
     float: left;
     position: relative;
     min-width: 150px;
     height: 30px;
     margin-right: 10px;
-    border: 1px solid #ddd;
+    /* border: 1px solid #ddd;
     background: #fff;
-    padding: 0 10px;
+    padding: 0 10px; */
 }
 
-.selected_value{
+/* .selected_value{
     font-size: 14px;
     line-height: 30px;
 }
@@ -156,9 +154,9 @@ body {
     top: 10px;
     height: 100px;
     left: 0;
-}
+} */
 
-/* .selectbox{
+.selectbox{
     width: 100%;
     height: 100%;
     font-size: 14px;
@@ -169,9 +167,9 @@ body {
     appearance: none;
     -moz-appearance: none;
     -webkit-appearance: none;
-} */
+}
 
-.selectbox::after{
+.category_element::after{
     position: absolute;
     top: 10px;
     right: 10px;
