--- a/promotion/css/promotion.css
+++ b/promotion/css/promotion.css
@@ -1,13 +1,13 @@
-/* TODO
- 1. 대체 텍스트 삽입
- 2. 해상도 대응
- */
-
 @charset "UTF-8";
 
-html,body{
+body{
+    font-family: '나눔 고딕', NanumGothic, '돋움', Dotum, sanf-serif;
     width: 100%;
     height: 100%;
+    margin: 0;
+}
+
+h1, h2{
     margin: 0;
 }
 
@@ -33,63 +33,43 @@ a{
 
 .wrap{
     position: relative;
-    height: 100%;
+    min-width: 1000px;
 }
 
 .header{
     position: fixed;
     top: 0;
     left: 0;
-    right: 0;
-    bottom: 0;
+    width: 100%;
     height: 66px;
     background-color: rgba(64, 64, 64, 0.75);
+    z-index: 1;
 }
 
 .header .link{
     display: block;
+    height: 100%;
+}
+
+.logo_area{
+    max-width: 980px;
+    margin: 0 auto;
 }
 
 .header .logo{
     vertical-align: top;
+    padding-top: 22px;
 }
 
-.content{
-    
-}
-
-.content:after{
-    clear: both;
-    display: block;
-    content: '';
-}
-
-.section{
-    float: left;
-    width: 100%;
-}
-
-.section .bg_pivot{
+.section .bg{
     height: 100%;
     margin: 0 auto;
+    background-repeat: no-repeat;
+    background-position-x: 50%;
 }
 
 .invite{
     height: 750px;
-}
-
-.invite .bg_pivot{
-    max-width: 1920px;
-}
-
-.invite .bg{
-    max-width: 1920px;
-}
-
-.section .bg{
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
-    height: 100%;
 }
 
 .invite .bg{
@@ -101,32 +81,24 @@ a{
     background-color: #f9939d;
 }
 
-.creator .bg_pivot{
-    max-width: 980px;
-}
-
 .creator .bg{
+    max-width: 980px;
     background-image: url(../image/section_creator.jpg);
 }
 
 .store{
     height: 1084px;
-}
-
-.store .bg_pivot{
-    max-width: 1920px;
+    background-color: #d5e43f;
 }
 
 .store .bg{
+    max-width: 1920px;
     background-image: url(../image/section_store.jpg);
 }
 
-.store .pivot{
+.store .list{
     width: 1000px;
     margin: 0 auto;
-}
-
-.store .list{
     padding-top: 300px;
 }
 
@@ -139,7 +111,7 @@ a{
 .store .element{
     float: left;
     width: 230px;
-    margin-right: 20px
+    margin: 0 10px
 }
 
 .store .link{
@@ -184,6 +156,8 @@ a{
 .store .info{
     height: 140px;
     text-align: center;
+    font-size: 20px;
+    color: #1b1d21;
 }
 
 .store .info .name{
@@ -200,26 +174,205 @@ a{
 .recipe{
     height: 1030px;
     background-color: #b893f9;
+    position: relative;
 }
 
-.creator .bg_pivot{
+.recipe:before{
+    content: '';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    background-image: url(../image/pattern_recipe.png);
+    background-repeat: repeat-x;
+    width: 100%;
+    height: 185px;
+    margin: auto 0;
+}
+
+.recipe .bg{
     max-width: 980px;
+    background-image: url(../image/section_recipe.png);
+    background-position-y: 50%;
+    position: relative;
 }
 
-.creator .bg{
-    background-image: url(../image/section_creator.jpg);
+.recipe .container{
+    position: absolute;
+    top: 373px;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
 
-.footer{
-
+.recipe .container .link{
+    display: inline-block;
+    width: 480px;
+    height: 482px;
+    border-radius: 10px;
 }
 
-.btn_top{
+.recipe .container .link + .link{
+    margin-left: 15px;
+}
+
+.recipe .btn{
+    position: absolute;
+    width: 310px;
+    height: 91px;
+    top: 520px;
+    left: 50%;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    border-radius: 10px;
+    background-image: url(../image/go_recipe.gif);
+}
+
+.recipe .btn:hover,
+.recipe .btn:focus{
+    background-image: url(../image/go_recipe_over.gif);
+}
+
+.faq{
+    max-width: 982px;
+    margin: 0 auto;
+}
+
+.faq .title{
+    margin-top: 100px;
+    font-size: 80px;
+    text-align: center;
+}
+
+.faq .list{
+    margin: 20px 0 100px;
+}
+
+.faq .element{
+    border-top: 1px solid #a1a5ad;
+}
+
+.faq .element:last-child{
+    border-bottom: 1px solid #a1a5ad;
+}
+
+.faq .question{
+    position: relative;
+}
+
+.faq .question:after{
+    content: '';
+    display: block;
+    clear: both;
+}
+
+.faq .question:before{
+    content: '';
+    float: left;
+    background-image: url(../image/icon_question.gif);
+    width: 21px;
+    height: 20px;
+    margin: 22px 0 0 20px;
+}
+
+.faq .question .text{
+    padding: 20px 60px 20px 20px;
+    line-height: 28px;
+    font-size: 20px;
+    color: #1b1d21;
+    overflow: hidden;
+}
+
+.faq .question .btn_open{
+    position: absolute;
+    background-image: url(../image/icon_arrow_down.gif);
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    border: none;
+    top: 1px;
+    right: 0;
+    bottom: 0;
+    width: 60px;
+    cursor: pointer;
+}
+
+.faq .element.open .btn_open{
+    background-image: url(../image/icon_arrow_up.gif);
+}
+
+.faq .element .arrow_close,
+.faq .element .arrow_open{
     display: none;
 }
 
-@media screen and (min-width: 1920px){
-    .invite{
-        background-color: #fff;
-    }
+.faq .element .arrow_close{
+    display: none;
+}
+
+.faq .element .arrow_open{
+    display: block;
+}
+
+.faq .element.open .arrow_open{
+    display: none;
+}
+
+.faq .element.open .arrow_close{
+    display: block;
+}
+
+.faq .answer{
+    display: none;
+    background-color: #f7f8fa;
+}
+
+.faq .answer:after{
+    content: '';
+    display: block;
+    clear: both;
+}
+
+.faq .answer:before{
+    content: '';
+    float: left;
+    background: url(../image/icon_answer.gif) no-repeat 0 0;
+    width: 21px;
+    height: 17px;
+    margin: 22px 0 0 20px;
+}
+
+.faq .element.open .answer{
+    display: block;
+}
+
+.faq .answer .text{
+    padding: 20px;
+    line-height: 28px;
+    font-size: 16px;
+    color: #60656e;
+    overflow: hidden;
+}
+
+.footer{
+    height: 80px;
+    background-color: #e0e4eb;
+    font-size: 18px;
+    line-height: 80px;
+    color: #70757d;
+    text-align: center;
+}
+
+.btn_top{
+    position: fixed;
+    padding: 0;
+    right: 0;
+    bottom: 180px;
+    border: 0;
+    z-index: 1;
+}
+
+.btn_top .img{
+    vertical-align: top;
 }
