--- a/foodwith/css/foodwith.css
+++ b/foodwith/css/foodwith.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
-body, h1, button, ul, li,
-input, textarea{
+body, h1, h2, button, ul, li,
+input, textarea, dl, dt, dd, ol, figure{
     margin: 0;
     padding: 0;
 }
@@ -19,7 +19,7 @@ a{
     color: #333;
 }
 
-ul{
+ul, ol{
     list-style: none;
 }
 
@@ -27,6 +27,10 @@ body, button, input, textarea{
     font-family: '나눔 고딕', NanumGothic, '돋움', Dotum, sans-serif;
     font-size: 14px;
     color: #333;
+}
+
+th, td{
+    border: 1px solid #c1c1c1;
 }
 
 .blind{
@@ -420,7 +424,100 @@ body, button, input, textarea{
     margin-top: 20px;
 }
 
-/* 일 */
+.wrap_recipe{
+    background-color: #f0f0f0;
+    padding: 30px 15px 50px;
+}
+
+.info_recipe:after{
+    content: '';
+    display: block;
+    clear: both;
+}
+
+.info_recipe .element{
+    position: relative;
+    float: left;
+    margin-top: 10px;
+}
+
+.info_recipe .element .subject{
+    display: inline-block;
+    vertical-align: top;
+    width: 90px;
+    color: #767676;
+}
+
+.info_recipe .element .value.number{
+    color: #666;
+    font-family: 'Tahoma';
+}
+
+.recipe{
+    border-top: 1px solid #c1c1c1;
+}
+
+.recipe .subject{
+    font-size: 16px;
+    color: #333;
+    font-weight: bold;
+    margin-bottom: 15px;
+}
+
+.recipe .value{
+    line-height: 20px;
+    color: #666;
+}
+
+.recipe .info_url{
+    color: #3b9a7b;
+}
+
+.recipe .subject ~ .subject{
+    margin-top: 20px;
+}
+
+.recipe_make_list .value_make{
+    line-height: 20px;
+    color: #666;
+    padding-left: 1.2em;
+    text-indent: -1.2em;
+}
+
+.recipe_make_list .value_make + .value_make{
+    margin-top: 8px;
+}
+
+.recipe_table{
+    table-layout: fixed;
+    border-collapse: collapse;
+    width: 100%;
+    margin-top: 30px;
+}
+
+.recipe_table th{
+    background-color: #eaeaea;
+    text-align: left;
+    padding: 10px 5px;
+    line-height: 20px;
+}
+
+.recipe_table td{
+    padding: 10px 5px;
+    line-height: 18px;
+}
+
+.recipe_img{
+    vertical-align: top;
+    width: 100%;
+}
+
+.recipe_desc{
+    text-align: center;
+    margin-top: 10px;
+}
+
+/* 모바일 */
 @media screen and (max-width:767px){
     .header .title .link{
         background: url(../image/logo_m.png) no-repeat 50% 50% /84px 18px;
@@ -532,6 +629,27 @@ body, button, input, textarea{
         padding: 5px 10px;
         font-size: 11px;
     }
+
+    .wrap_recipe .title{
+        font-size: 28px;
+    }
+
+    .info_recipe{
+        margin-top: 10px;
+    }
+
+    .info_recipe .element{
+        width: 100%;
+    }
+
+    .recipe{
+        margin-top: 30px;
+        padding-top: 30px;
+    }
+
+    .area_recipe_img{
+        margin-top: 30px;
+    }
 }
 
 /* 태블릿 이상 */
@@ -616,6 +734,28 @@ body, button, input, textarea{
         display: inline-block;
         vertical-align: top;
         margin-right: 20px;
+    }
+
+    .wrap_recipe .title{
+        font-size: 36px;
+    }
+
+    .info_recipe{
+        margin-top: 20px;
+    }
+
+    .info_recipe .element{
+        width: 50%;
+    }
+
+    .recipe{
+        margin-top: 40px;
+        padding-top: 40px;
+    }
+
+    .area_recipe_img{
+        max-width: 600px;
+        margin: 30px auto;
     }
 }
 
