--- a/foodwith/css/foodwith.css
+++ b/foodwith/css/foodwith.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
-body, h1, h2, button, ul, li,
-input, textarea, dl, dt, dd, ol, figure{
+body, h1, h2, h3, button, ul, li,
+input, textarea, dl, dt, dd, ol, figure, p{
     margin: 0;
     padding: 0;
 }
@@ -23,14 +23,14 @@ ul, ol{
     list-style: none;
 }
 
+img{
+    vertical-align: top;
+}
+
 body, button, input, textarea{
     font-family: '나눔 고딕', NanumGothic, '돋움', Dotum, sans-serif;
     font-size: 14px;
     color: #333;
-}
-
-th, td{
-    border: 1px solid #c1c1c1;
 }
 
 .blind{
@@ -45,18 +45,14 @@ th, td{
 .wrap{
     margin: 0 auto;
     min-width: 320px;
-    max-width: 988px;
 }
 
 .header{
-    position: relative;
     background-color: #fff;
 }
 
-.header:after{
-    clear: both;
-    display: block;
-    content: '';
+.header .wrap_header{
+    position: relative;
 }
 
 .header .title{
@@ -101,10 +97,16 @@ th, td{
     width: 30px;
 }
 
-.thumbnail_area .img{
+.thumbnail_img{
+    display: inline-block;
     vertical-align: top;
+    background: url(../image//thumbnail_profile_none.jpg) no-repeat;
     border-radius: 30px;
-    background: url(../image//thumbnail_profile_none.jpg) no-repeat 0 0 /30px 30px;
+}
+
+.thumbnail_area .img{
+    border-radius: 30px;
+    width: 100%;
 }
 
 .thumbnail_area .nickname{
@@ -116,6 +118,7 @@ th, td{
 
 .wrap_content{
     background-color: #f0f0f0;
+    text-align: center;
 }
 
 .item_food .link{
@@ -134,7 +137,6 @@ th, td{
 }
 
 .item_food .img{
-    vertical-align: top;
     width: 100%;
 }
 
@@ -149,28 +151,20 @@ th, td{
 }
 
 .wrap_content .btn_more{
-    vertical-align: top;
-    line-height: 0;
     width: 100%;
-    margin-top: 15px;
     background-color: #fff;
     border: 1px solid #bfc0c1;
+    font-size: 16px;
 }
 
 .wrap_content .btn_more::before{
     content: '';
     display: inline-block;
-    background: url(../image/icon_arrow_more.png) no-repeat 0 50% /16px 16px;
+    vertical-align: top;
+    background: url(../image/icon_arrow_more.png) no-repeat 0 50%;
+    background-size: 16px 16px;
     width: 16px;
     height: 50px;
-}
-
-.btn_more .text{
-    font-size: 16px;
-    line-height: 17px;
-    display: inline-block;
-    vertical-align: top;
-    margin: 17px 0 0 3px;
 }
 
 .wrap_contact{
@@ -179,13 +173,11 @@ th, td{
 
 .wrap_contact .title{
     display: block;
-    text-align: center;
     font-weight: normal;
 }
 
 .wrap_contact .need{
     display: block;
-    text-align: center;
     font-weight: normal;
     margin-top: 10px;
 }
@@ -209,11 +201,37 @@ th, td{
 .input_nickname{
     display: block;
     width: 100%;
-    padding: 5px 0 10px;
+    padding: 5px 0 5px;
     border-bottom: 1px solid #c1c1c1;
 }
 
-.input_nickname::placeholder{
+.input_nickname::placeholder,
+.input_email::placeholder
+.contact_message::placeholder{
+    color: #acacac;
+}
+
+.input_nickname::-webkit-input-placeholder,
+.input_email::-webkit-input-placeholdereholder,
+.contact_message::-webkit-input-placeholdereholder {
+    color: #acacac;
+}
+
+.input_nickname::-moz-placeholder,
+.input_email::-moz-placeholder,
+.contact_message::-moz-placeholder {
+    color: #acacac;
+}
+
+.input_nickname:-ms-input-placeholder,
+.input_email:-ms-input-placeholder,
+.contact_message:-ms-input-placeholder {
+    color: #acacac;
+}
+
+.input_nickname:-moz-placeholder,
+.input_email:-moz-placeholder,
+.contact_message:-moz-placeholder{
     color: #acacac;
 }
 
@@ -229,7 +247,6 @@ th, td{
 
 .mailbox{
     position: relative;
-    margin-top: 5px;
 }
 
 .mailbox .area_id{
@@ -244,12 +261,8 @@ th, td{
     display: inline-block;
     vertical-align: top;
     width: 100%;
-    padding-bottom: 10px;
+    padding: 5px 0;
     border-bottom: 1px solid #c1c1c1;
-}
-
-.input_email::placeholder{
-    color: #acacac;
 }
 
 .mailbox .unit{
@@ -257,7 +270,7 @@ th, td{
     text-align: center;
     width: 20px;
     margin: 0 auto;
-    padding-bottom: 11px;
+    padding-top: 5px;
 }
 
 .area_address{
@@ -274,10 +287,11 @@ th, td{
 
 .address_mail{
     width: 100%;
-    padding-bottom: 10px;
+    padding: 5px 0;
     border-bottom: 1px solid #c1c1c1;
-    background: url(../image/icon_arrow_email.png) no-repeat 100% 6px /10px 6px;
-    cursor: pointer;
+    background: url(../image/icon_arrow_email.png) no-repeat 100% 10px;
+    background-size: 10px 6px;
+    text-align: left;
 }
 
 .list_address{
@@ -298,20 +312,17 @@ th, td{
     background-color: #fff;
 }
 
-.area_message{
-    margin-top: 25px;
-    border: 1px solid #c1c1c1;
-    padding: 10px;
-}
-
 .contact_message{
     width: 100%;
+    height: 100%;
     resize: none;
-    border: 0;
+    margin-top: 25px;
+    border: 1px solid #c1c1c1;
 }
 
 .contact_message::placeholder{
     color: #acacac;
+    padding: 10px;
 }
 
 .btn_submit{
@@ -336,7 +347,9 @@ th, td{
 }
 
 .area_notice .desc{
-    display: block;
+    display: inline-block;
+    vertical-align: top;
+    max-width: 100%;
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
@@ -345,7 +358,6 @@ th, td{
 
 .area_notice .btn_more{
     padding: 10px 0;
-    max-width: 40px;
     position: absolute;
     top: 0;
     right: 0;
@@ -356,40 +368,24 @@ th, td{
     padding-top: 25px;
 }
 
-.area_business .title{
+.area_business .wrap{
     display: block;
-    font-size: 16px;
 }
 
-.business_creators{
-    margin-bottom: 20px;
-}
-
-.business_creators .item_creator{
-    display: inline-block;
-    vertical-align: top;
-}
-
-.business_creators .item_business{
-    display: inline-block;
-    vertical-align: top;
-    padding-left: 10px;
-    margin-left: 6px;
-    border-left: 1px solid #c1c1c1;
-}
-
-.business_partners{
+.area_business .wrap + .wrap{
     margin-top: 15px;
 }
 
-.business_partners .item_partner{
-    display: inline-block;
-    vertical-align: top;
+.area_business .title{
+    font-size: 16px;
+    margin-right: 10px;
 }
 
-.business_partners .item_store{
-    display: inline-block;
-    vertical-align: top;
+.area_business .item{
+    line-height: 18px;
+}
+
+.area_business .item + .item{
     padding-left: 10px;
     margin-left: 6px;
     border-left: 1px solid #c1c1c1;
@@ -397,7 +393,7 @@ th, td{
 
 .footer{
     background-color: #fff;
-    padding: 20px;
+    padding: 20px 0;
     text-align: center;
 }
 
@@ -426,7 +422,6 @@ th, td{
 
 .wrap_recipe{
     background-color: #f0f0f0;
-    padding: 30px 15px 50px;
 }
 
 .info_recipe:after{
@@ -436,16 +431,27 @@ th, td{
 }
 
 .info_recipe .element{
-    position: relative;
-    float: left;
     margin-top: 10px;
 }
 
 .info_recipe .element .subject{
-    display: inline-block;
-    vertical-align: top;
+    float: left;
     width: 90px;
     color: #767676;
+}
+
+.info_recipe .element .wrap_value{
+    padding-left: 90px;
+}
+
+.info_recipe .element .value{
+    display: inline-block;
+    vertical-align: top;
+    width: 100%;
+    color: #666;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .info_recipe .element .value.number{
@@ -455,11 +461,12 @@ th, td{
 
 .recipe{
     border-top: 1px solid #c1c1c1;
+    margin-top: 30px;
+    padding-top: 30px;
 }
 
 .recipe .subject{
     font-size: 16px;
-    color: #333;
     font-weight: bold;
     margin-bottom: 15px;
 }
@@ -471,6 +478,7 @@ th, td{
 
 .recipe .info_url{
     color: #3b9a7b;
+    text-decoration: underline;
 }
 
 .recipe .subject ~ .subject{
@@ -478,14 +486,19 @@ th, td{
 }
 
 .recipe_make_list .value_make{
+    padding-left: 17px;
+    text-indent: -17px;
     line-height: 20px;
     color: #666;
-    padding-left: 1.2em;
-    text-indent: -1.2em;
 }
 
 .recipe_make_list .value_make + .value_make{
-    margin-top: 8px;
+    margin-top: 5px;
+}
+
+.recipe_table th,
+.recipe_table td{
+    border: 1px solid #c1c1c1;
 }
 
 .recipe_table{
@@ -499,35 +512,53 @@ th, td{
     background-color: #eaeaea;
     text-align: left;
     padding: 10px 5px;
-    line-height: 20px;
+    font-size: 16px;
+    color: #333;
 }
 
 .recipe_table td{
     padding: 10px 5px;
     line-height: 18px;
+    color: #666;
+}
+
+.recipe_table .col_fix{
+    width: 100px;
+}
+
+.area_recipe_img{
+    text-align: center;
+    margin-top: 30px;
 }
 
 .recipe_img{
-    vertical-align: top;
     width: 100%;
+    max-width: 600px;
 }
 
 .recipe_desc{
-    text-align: center;
     margin-top: 10px;
+    color: #666;
 }
 
-/* 모바일 */
 @media screen and (max-width:767px){
     .header .title .link{
-        background: url(../image/logo_m.png) no-repeat 50% 50% /84px 18px;
+        background: url(../image/logo_m.png) no-repeat 50% 50%;
+        background-size: 84px 18px;
         width: 114px;
         height: 50px;
     }
 
+    .header:after{
+        clear: both;
+        display: block;
+        content: '';
+    }
+
     .btn_menu{
         float: right;
-        background: url(../image/icon_menu.png) no-repeat 50% 50% /16px 16px;
+        background: url(../image/icon_menu.png) no-repeat 50% 50%;
+        background-size: 16px 16px;
         width: 46px;
         height: 50px;
     }
@@ -539,7 +570,6 @@ th, td{
         left: 0;
         width: 100%;
         padding: 10px 0;
-        height: 108px;
         background-color: #fff;
     }
 
@@ -553,7 +583,7 @@ th, td{
     }   
 
     .link_banner{
-        padding: 20px 35px;
+        padding: 20px 35px 40px;
         text-align: center;
     }
 
@@ -579,7 +609,8 @@ th, td{
         margin: 0 auto;
     }
 
-    .thumbnail_area .img{
+    .thumbnail_img{
+        background-size: 30px 30px;
         width: 30px;
         height: 30px;
     }
@@ -606,12 +637,22 @@ th, td{
         line-height: 40px;
     }
 
+    .wrap_content .btn_more{
+        margin-top: 15px;
+        line-height: 50px;
+    }
+
     .wrap_contact{
         padding: 30px 15px;
     }
 
     .wrap_contact .title{
         font-size: 22px;
+        text-align: center;
+    }
+
+    .wrap_contact .need{
+        text-align: center;
     }
 
     .contact_inputbox{
@@ -626,8 +667,17 @@ th, td{
     .btn_submit{
         top: 25px;
         right: 25px;
-        padding: 5px 10px;
+        width: 70px;
+        height: 25px;
         font-size: 11px;
+    }
+
+    .area_business .wrap{
+        display: block;
+    }
+
+    .wrap_recipe{
+        padding: 30px 15px 50px;
     }
 
     .wrap_recipe .title{
@@ -638,21 +688,11 @@ th, td{
         margin-top: 10px;
     }
 
-    .info_recipe .element{
-        width: 100%;
-    }
-
-    .recipe{
-        margin-top: 30px;
-        padding-top: 30px;
-    }
-
     .area_recipe_img{
         margin-top: 30px;
     }
 }
 
-/* 태블릿 이상 */
 @media screen and (min-width:768px){
     .btn_menu{
         display: none;
@@ -679,13 +719,14 @@ th, td{
         padding: 0 10px;
     }
 
-    .link_banner{
+    .wrap_banner{
         position: relative;
     }
 
     .img_banner{
         position: absolute;
         top: 50%;
+        right: 0;
     }
 
     .title_banner{
@@ -693,14 +734,15 @@ th, td{
     }
 
     .thumbnail_area{
-        padding-top: 50px;
+        padding-top: 70px;
     }
 
     .thumbnail_area::before{
-        top: 25px;
+        top: 35px;
     }
 
-    .thumbnail_area .img{
+    .thumbnail_img{
+        background-size: 40px 40px;
         width: 40px;
         height: 40px;
     }
@@ -726,43 +768,38 @@ th, td{
     .btn_submit{
         top: 40px;
         right: 50px;
-        padding: 10px 20px;
+        width: 80px;
+        height: 30px;
         font-size: 15px;
     }
 
     .area_business .title{
         display: inline-block;
         vertical-align: top;
-        margin-right: 20px;
+        line-height: 18px;
+        width: 80px;
     }
 
     .wrap_recipe .title{
         font-size: 36px;
     }
 
-    .info_recipe{
-        margin-top: 20px;
-    }
-
     .info_recipe .element{
         width: 50%;
+        float: left;
     }
 
-    .recipe{
-        margin-top: 40px;
-        padding-top: 40px;
-    }
-
-    .area_recipe_img{
-        max-width: 600px;
-        margin: 30px auto;
+    .info_recipe .element:after{
+        content: '';
+        display: block;
+        clear: both;
     }
 }
 
-/* 태블릿  */
 @media screen and (min-width:768px) and (max-width:1023px){
     .header .title .link{
-        background: url(../image/logo_m.png) no-repeat 50% 50% /84px 18px;
+        background: url(../image/logo_m.png) no-repeat 50% 50%;
+        background-size: 84px 18px;
         width: 114px;
         height: 50px;
     }
@@ -774,13 +811,13 @@ th, td{
 
     .menu_list .link{
         line-height: 50px;
+        font-size: 18px;
     }
 
     .img_banner{
         width: 350px;
         height: 252px;
         margin-top: -126px;
-        right: 35px;
     }
 
     .title_banner_area{
@@ -791,10 +828,15 @@ th, td{
         font-size: 32px;
         line-height: 40px;
         max-height: 120px;
+        padding: 70px 350px 0 0 ;
     }
 
     .wrap_content{
         padding: 0 34px 15px;
+    }
+
+    .list_food{
+        margin-left: -20px;
     }
 
     .list_food:after{
@@ -809,16 +851,12 @@ th, td{
         margin-top: 20px;
     }
 
-    .item_food .item_wrap{
-        padding: 0 10px;
+    .wrap_contact .need{
+        text-align: center;
     }
 
-    .item_food:nth-child(2n + 1) .test{
-        margin-left: -10px;
-    }
-
-    .item_food:nth-child(2n){
-        margin-right: -10px;
+    .item_food .link{
+        margin-left: 20px;
     }
 
     .item_food .link:before{
@@ -829,21 +867,40 @@ th, td{
         line-height: 50px;
     }
 
+    .wrap_content .btn_more{
+        margin-top: 15px;
+        line-height: 50px;
+    }
+
     .wrap_contact{
         padding: 30px 34px;
     }
 
     .wrap_contact .title{
         font-size: 30px;
+        text-align: center;
+    }
+
+    .wrap_recipe{
+        padding: 30px 15px 50px;
+    }
+
+    .wrap_recipe .info_recipe{
+        margin: 30px 0 40px;
+    }
+
+    .wrap_recipe .recipe{
+        padding-top: 40px;
     }
 }
 
-/* pc */
 @media screen and (min-width:1024px){
-    .header{
+    .wrap_header{
+        width: 988px;
+        margin: 0 auto;
         height: 70px;
     }
-
+    
     .header .title .link{
         background: url(../image/logo_pc.png) no-repeat 0 50%;
         width: 107px;
@@ -859,22 +916,29 @@ th, td{
         height: 420px
     }
 
+    .wrap_banner{
+        width: 988px;
+        margin: 0 auto;
+        height: 100%;
+    }
+
     .menu_list .link{
         line-height: 70px;
+        font-size: 22px;
     }
 
     .img_banner{
         width: 500px;
         height: 360px;
         margin-top: -180px;
-        right: 0;
     }
 
     .title_banner_area{
-        width: 400px;
+        width: 460px;
     }
 
     .title_banner{
+        width: 460px;
         font-size: 40px;
         line-height: 52px;
         max-height: 156px;
@@ -882,7 +946,7 @@ th, td{
     }
 
     .wrap_content{
-        padding: 0 0 15px;
+        padding-bottom: 15px;
     }
 
     .list_food:after{
@@ -892,7 +956,9 @@ th, td{
     }
 
     .list_food{
-        margin-left: -20px;
+        width: 1008px;
+        margin: 0 auto;
+        padding-right: 20px;
     }   
 
     .item_food{
@@ -906,38 +972,38 @@ th, td{
         bottom: 0;
     }
 
-    .item_food .dim {
-        display: none;
-    }
-
-    .item_food .dim{
-        position: absolute;
-        width: 100%;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
+    .item_food .link:hover:before,
+    .item_food .link:focus:before{
         background-color: rgba(255, 255, 255, 0.3);
     }
 
-    .item_food .link:hover .dim,
-    .item_food .link:focus .dim{
+    .item_food .title{
+        display: none;
+        line-height: 50px;
+        position: absolute;
+        bottom: 1px;
+        left: 1px;
+        right: 1px;
+        background-color: #fff;
+        z-index: 2;
+    }
+
+    .item_food .link:hover .title{
         display: block;
     }
 
-    .item_food .title{
-        line-height: 50px;
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        background-color: #fff;
+    .wrap_content .btn_more{
+        width: 988px;
+        margin-top: 15px;
+        line-height: 60px;
     }
 
     .wrap_contact{
         position: relative;
         padding: 30px 0;
         background: url(../image/bg_pencil.png) no-repeat 0 300px;
+        width: 988px;
+        margin: 0 auto;
     }
 
     .wrap_contact:after{
@@ -947,7 +1013,7 @@ th, td{
     }
 
     .wrap_contact .area_title{
-        padding-right: 690px;
+        padding-right: 590px;
         position: absolute;
         top: 55px;
         left: 0;
@@ -955,10 +1021,50 @@ th, td{
 
     .wrap_contact .title{
         font-size: 42px;
+        text-align: left;
     }
-    
+
+    .wrap_contact .need{
+        text-align: left;
+    }
+
     .contact_inputbox{
-        width: 590px;
+        width: 490px;
         float: right;
+        background-color: rgba(255, 255, 255, 0.9);
+    }
+
+    .contact_message{
+        background-color: rgba(255, 255, 255, 0.9);
+    }
+
+    .wrap_info .area_notice{
+        width: 988px;
+        margin: 0 auto;
+    }
+
+    .wrap_info .area_business{
+        width: 988px;
+        margin: 0 auto;
+    }
+
+    .wrap_recipe{
+        padding: 30px 0 50px;
+    }
+
+    .wrap_recipe .title{
+        width: 988px;
+        margin: 0 auto;
+    }
+
+    .wrap_recipe .info_recipe{
+        width: 988px;
+        margin: 30px auto 40px;
+    }
+
+    .wrap_recipe .recipe{
+        width: 988px;
+        margin: 0 auto;
+        padding-top: 40px;
     }
 }
